A.......S. [ZBXNEXT-3457] added support of user macros for trigger tags; dropped forward slash restriction in "Tag name" and "Tag for matching" (Sasha, vso)
........S. [ZBX-10694] added rollup health sensor item to vmware hypervisor template (wiper)
........S. [ZBXNEXT-2969] added support for suffixed and negative trigger function parameters (gleb)

Bug fixes:
........S. [ZBX-11223] rewritten calculated item formula parsing, simple macro parsing and LLD macro parsing; fixed several problems with function parsing (gleb, Sergejs)
A......... [ZBX-11121] disallowed leaving user without linked user groups with usergroup.update, usergroup.massupdate, usergroup.delete API methods (Cemeris)
A.F....... [ZBX-9926] fixed displaying of LLD graphs in host screens if user has no rights to Templates group (Gunars)
...G...PS. [ZBX-11149] added support of OpenSSL 1.1.0 (Andris, gleb)
A......... [ZBX-11191] fixed web scenarios not updating step items when giving only "applicationid" and steps with "httpstepid" properties (Ivo)
A......... [ZBX-11191] fixed updating templated web scenario steps by prohibiting to directly change the step name or giving different amount of steps than in template (Ivo)
A......... [ZBX-11191] improved web scenario step validation by adding required fields (Ivo)
...G...... [ZBX-11292] fixed getting network interface statistics on Oracle Solaris 10/11 (Andris)
A......... [ZBX-11125] prohibited zero in first parameter of nodata() trigger function (Sasha, vso)
........S. [ZBX-11349] removed possibility to create items, triggers and graphs with empty names after low level discovery macro substitution (Sergejs)
........S. [ZBX-11310] fixed event tag conditions checking, that contains operator 'not like' or '<>' in events without tags (Sergejs)
A......... [ZBX-11244] fixed parsing of JSON text when PHP is compiled without JSON library (Cemeris)
..F....... [ZBX-11219] renamed second argument for net.dns and net.dns.record items from "zone" to "name" (Cemeris)